# pyspotlightarchiver

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
src/: empty_locales.txt  main.py
src/helpers/: download_db.py  download_helper.py  report_duplicates_helper.py  retry_helper.py  v3_helper.py  v4_helper.py
src/pyspotlightarchiver/: main.py
src/pyspotlightarchiver/helpers/: download_db.py  download_helper.py  imagehash_helper.py  report_duplicates_helper.py  v3_helper.py  v4_helper.py
src/pyspotlightarchiver/tests/: url.txt
src/pyspotlightarchiver/utils/: countdown.py  download_utils.py  exif_utils.py  list_url.py  locale_data.py
src/tests/: v3_api.json  v4_api.json
src/utils/: countdown.py  download_utils.py  exclude_locale.py  exif_utils.py  list_url.py  locale_data.py
